array.island.Island.scala.error
Compilation error:
Island:3: error: not found: value size
  var l = size(num)
          ^